fixed sizing and spacing, added description

--- a/style.css
+++ b/style.css
@@ -1,67 +1,73 @@
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
+body {
+    height: 100vh;
+    background: linear-gradient(tomato, lightsalmon);
+}
+
+.container {
+    height: 80vh;
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 auto;
+}
+
 header {
-    height: 10vh;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header div {
     display: flex;
     align-items: center;
+    margin-bottom: 0.5rem;
 }
 
 header img {
     height: 4rem;
 }
 
-body {
-    background: linear-gradient(tomato, lightsalmon);
-    height: 100vh;
+header p {
+    font-size: 1.25rem;
 }
 
 main {
-    width: 100%;
-    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#seconds {
-    width: 5rem;
-    font-size: 2rem;
-    outline: none;
-    background: none;
-    border: none;
-    /* border-bottom: 2px solid gray; */
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    margin-bottom: 0.5rem;
-}
-
-#seconds::placeholder {
-    color: lightgray;
-}
-
 main div:last-child {
     display: flex;
 }
 
-.btn {
-    background-color: white;
-    border-radius: 0.5rem;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 0.75rem 1.25rem;
+.button {
+    height: 45px;
+    width: 105px;
+    /* padding: 0.75rem 1.25rem; */
+    /* needed to change to pixels, with padding all buttons were different sizes and when clicking stop, the continue button would shift everything, keeping for future reference */
+    font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     font-weight: 500;
-    font-family: 'Roboto', sans-serif;
+    background-color: white;
+    border: none;
+    border-radius: 0.5rem;
+    outline: none;
+    cursor: pointer;
     margin: 0.5rem;
 }
 
-.btn:hover {
+.button:hover {
     opacity: 0.75;
 }
 
@@ -73,13 +79,29 @@ main div:last-child {
     color: tomato;
 }
 
-#start, #stop, #continue {
-    display: none;
-}
-
 .counter {
     color: white;
-    font-size: 2rem;
     font-family: 'Roboto', sans-serif;
+    font-size: 2rem;    
     margin-bottom: 0.5rem;
+}
+
+#seconds {
+    width: 5rem;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    /* border-bottom: 2px solid gray; */
+    outline: none;
+    margin-bottom: 0.5rem;
+}
+
+#seconds::placeholder {
+    color: lightgray;
+}
+
+#start, #stop, #continue {
+    display: none;
 }
